optimalizace api
